# Generative-Autonomous-Legal-Entities

./: .gitignore  LICENSE  Operating_Agreement.md  README.md  Wyoming_Law-Excerpts.md  governance-principles-and-rules.md
Resources/: README.md  Z_CI_PNG-30_Transcript_Code-Snippets.md
llmllc/: pyproject.toml
llmllc/llmllc/: bot.py  run_email.py
sales-agent/: .gitignore  LICENSE  README.md  requirements.txt  run.py
sales-agent/kb/: agent_config.json  product_catalog.txt  stages.json
sales-agent/kb/prompts/: SALES_AGENT_CONVERSATION_PROMPT.txt  SALES_AGENT_TOOLS_PROMPT.txt  STAGE_ANALYZER_PROMPT.txt
sales-agent/llm_llc/: parsers.py  stages.py
sales-agent/llm_llc/agents/: sales_agents.py
sales-agent/llm_llc/chains/: sales_conv_chain.py  stage_analyzer_chain.py
sales-agent/llm_llc/gmail/: email_body.py  gmail.py
sales-agent/llm_llc/loggers/: audit_logger.py  sys_logger.py  time_logger.py
sales-agent/llm_llc/prompts/: prompts.py
sales-agent/llm_llc/tools/: product_catalog_tool.py
